Change syllabus header color to red

--- a/static/materials/phil105-syllabus.html
+++ b/static/materials/phil105-syllabus.html
@@ -135,7 +135,7 @@
   <!--  Horizontal separators  -->
 <style type="text/css">
 h2:before {
-   background-color: #000000;
+   background-color: #aa0101;
     <!-- color: black; -->
 }
 </style>
