--- a/static/materials/phil105-syllabus.html
+++ b/static/materials/phil105-syllabus.html
@@ -211,7 +211,7 @@ h2:before {
 <h2>Course Requirements</h2>
 
     <h3>Preparation</h3>
-    <p>You are expected to attend every class meeting fully prepared to discuss each assigned reading, to submit written work punctually, and to offer thoughtful and constructive responses to the remarks of your instructor and your classmates. Make sure that you bring the relevant readings with you to every lecture class. I further expect you to treat both the texts at hand and your classmates’ ideas with openness and respect. Because the topics in this course may be emotionally charged or challenging for class members, I hope we can create an environment that is both intellectually productive and supportive for all. I realize there might be days when class members may choose to be silent. Beyond verbal participation, your active and supportive listening is also an important and valuable form of participation. I hope that we will continuously reflect upon our class processes so that we can build an inclusive intellectual community where all feel valued and supported in their learning.</p>
+    <p>You are expected to attend every class meeting fully prepared to discuss each assigned reading, to submit written work punctually, and to offer thoughtful and constructive responses to the remarks of your instructor and your classmates. Make sure that you bring the relevant readings with you to every lecture class. I further expect you to treat both the texts at hand and your classmates’ ideas with openness and respect. Because the topics in this course may be emotionally charged or challenging for class members, I hope we can create an environment that is both intellectually productive and supportive for all. Beyond verbal participation, your active and supportive listening is also an important and valuable form of participation. I hope that we will continuously reflect upon our class processes so that we can build an inclusive intellectual community where all feel valued and supported in their learning.</p>
 
     <!-- Attendance -->
     <h3>Attendance</h3>
@@ -227,7 +227,7 @@ h2:before {
 
     <!-- Grading -->
     <h3>Grading</h3>
-    <p>UNL uses an A through F system where a student’s grade point average (GPA) is computed based on point values assigned to each grade. Passing grades are A+, A, A-, B+, B, B-, C+, C, C-, D+, D, D-, and P. Students registered Pass/No Pass must earn a grade of “C” or better for a “P” grade. A grade of “F” represents that the student did not pass the course. The “F” is factored into the Grade Point Average. There is no university-wide grading scale. Unless there are existing departmental guidelines, instructors define the numerical value for each letter grade that they assign. Check with your department regarding grading scale polices and practices. A grade of “I” or incomplete signifies that the student was unable to complete the course. Incomplete grades should only be used when illness, military service, hardship, or death in the immediate family prevents a student from completing a course in which <em>requirements have already been substantially completed</em>. The student <strong>should</strong> complete assignments and/or exams WITHOUT re-registering or attending the course in a subsequent term. All “I” grades issued for <em>undergraduate</em> courses automatically expire and are replaced with a failing grade one year after the end of the current term, unless a grade change form is received from the instructor prior to that time.</p>
+    <p>UNL uses an A through F system where a student’s grade point average (GPA) is computed based on point values assigned to each grade. Passing grades are A+, A, A-, B+, B, B-, C+, C, C-, D+, D, D-, and P. Students registered Pass/No Pass must earn a grade of “C” or better for a “P” grade. A grade of “F” represents that the student did not pass the course. The “F” is factored into the Grade Point Average. A grade of “I” or incomplete signifies that the student was unable to complete the course. Incomplete grades are used only when illness, military service, hardship, or death in the immediate family prevents a student from completing a course in which <em>requirements have already been substantially completed</em>. The student <strong>should</strong> complete assignments and/or exams WITHOUT re-registering or attending the course in a subsequent term. All “I” grades issued for <em>undergraduate</em> courses automatically expire and are replaced with a failing grade one year after the end of the current term, unless a grade change form is received from the instructor prior to that time.</p>
 
     <!-- Late Work -->
     <h3>Late Work</h3>
@@ -266,7 +266,7 @@ h2:before {
 
     <!-- Academic Integrity -->
     <h3>Academic Integrity</h3>
-    <p>All the work you turn in (including papers, drafts, and discussion board posts) must be written by you specifically for this course. It must originate with you in form and content with all contributory sources fully and specifically acknowledged. Make yourself familiar with UNL’s Student Code of Conduct and Academic Integrity Code, available <a href="https://stuafs.unl.edu/DeanofStudents/Student%20Code%20of%20Conduct%20May%20Rev%202014%20a.pdf">online</a>. <strong>In this course, the normal penalty for any violation of the code is an “F” for the semester</strong>. Violations may have additional consequences including expulsion from the university. Don’t plagiarize – It just isn’t worth it.</p>
+    <p>All the work you turn in (including papers, drafts, and discussion board posts) must be written by you specifically for this course. It must originate with you in form and content with all contributory sources fully and specifically acknowledged. Make yourself familiar with UNL’s Student Code of Conduct and Academic Integrity Code, available <a href="https://stuafs.unl.edu/DeanofStudents/Student%20Code%20of%20Conduct%20May%20Rev%202014%20a.pdf">online</a>. <strong>In this course, the normal penalty for any violation of the code is an “F” for the course</strong>. Violations may have additional consequences including expulsion from the university. Don’t plagiarize – It just isn’t worth it.</p>
 
     <!-- University Policies -->
     <h3>University Policies</h3>
@@ -278,7 +278,7 @@ h2:before {
 
     <!-- Miscellaneous -->
     <h3>Miscellaneous</h3>
-    <p>There will be no use of electronic devices in the classroom unless explicitly permitted by me. Please turn off laptops, cell phones, beeping watches, and any other gadgets that distract or make noise before entering our classroom. Absolutely no texting is permitted during class. I will confiscate your device for the duration of the class and possibly subtract up to five points from your participation grade each and every time your phone rings or I see you texting during class.</p>
+    <p>There will be no use of electronic devices in the classroom unless explicitly permitted by me. Please turn off laptops, cell phones, beeping watches, and any other gadgets that distract or make noise before entering our classroom. Absolutely no texting is permitted during class. I will confiscate your device for the duration of the class and possibly subtract up to five points from your participation grade each and every time your phone rings or I see you texting during class. If you need to have your phone available due to an emergency, you will alert me to this before class begins.</p>
 
 
 <!-- Resources -->
@@ -296,7 +296,7 @@ You can schedule free appointments for individual academic coaching with First-Y
 
     <!-- Reference -->
     <h3>Reference</h3>
-    <p>The Stanford Encyclopedia of Philosophy at <a href="http://plato.stanford.edu" class="uri">http://plato.stanford.edu</a> is an excellent online resource.</p>
+    <p>The Stanford Encyclopedia of Philosophy at <a href="https://plato.stanford.edu" class="uri">https://plato.stanford.edu</a> is an excellent online resource.</p>
 
 
 
