--- a/static/materials/phil105-syllabus.html
+++ b/static/materials/phil105-syllabus.html
@@ -245,7 +245,7 @@ h2:before {
     <p><p>Explain and critically assess a philosophical argument.</p>
 <ul>
 <li><strong>Essay One</strong>: Take home. Topics will be provided. Approximately 3 pages.</li>
-<li><strong>Essay Two</strong>: In-class essay. Topics will be provided. Approximately 3 pages.</li>
+<li><strong>Essay Two</strong>: In-class essay. Topics will be provided. Approximately 2-3 pages.</li>
 </ul></p>
     
     <!-- Quizzes -->
