--- a/static/materials/phil105-syllabus.html
+++ b/static/materials/phil105-syllabus.html
@@ -194,8 +194,8 @@ h2:before {
 <!-- Course Objectives -->
 <h2>Course Objectives</h2>
 <p><ul>
-<li><p>This course satisfies ACE requirement 5, that students use knowledge, historical perspectives, analysis, interpretation, critical evaluation, and the standards of evidence appropriate to the humanities to address problems and issues. Students will be evaluated with respect to these outcomes by taking regular quizzes, and more comprehensivly, by two exams and a final paper.</p></li>
-<li><p>PHIL 105 also satisfies ACE requirement 8, that students use knowledge, theories, and analysis to explain ethical principles and their importance in society. Students will be evaluated with respect to these outcomes by answering essay questions in the two exams and by writing a paper.</p></li>
+<li><p>This course satisfies ACE requirement 5, that students use knowledge, historical perspectives, analysis, interpretation, critical evaluation, and the standards of evidence appropriate to the humanities to address problems and issues. Students will be evaluated with respect to these outcomes by taking regular quizzes, and more comprehensivly, by two papers and an exam.</p></li>
+<li><p>PHIL 105 also satisfies ACE requirement 8, that students use knowledge, theories, and analysis to explain ethical principles and their importance in society. Students will be evaluated with respect to these outcomes by answering essay questions in the two writing exercises and on an exam.</p></li>
 <li>In completing this course students satisfy these outcomes by being able to (i) find the argument of a text and restate it clearly in their own words; (ii) explain viewpoints clearly that are not their own; (iii) think critically about the ideas discussed in this course, including the moral and political significance of our food choices; (iv) explain the practical significance of different courses of action regarding our food choices, both as individuals and as a society; (v) write papers using theses, organization, arguments, evidence, and language suitable to analytical writing in general and the discipline of philosophy in particular.</li>
 </ul></p>
 
