Add slide materials

--- a/slides/week1.html
+++ b/slides/week1.html
@@ -11,8 +11,6 @@
 
 <link rel="stylesheet" href="file:///Users/roambot/bin/reveal.js/css/theme/solarized.css" id="theme"/>
 
-<link rel="stylesheet" href="/Users/cmclear2/Dropbox/Work/projects/phil101/content/slides/local.css"/>
-
 <link rel="stylesheet" href="/Users/Roambot/Dropbox/Work/projects/phil101/content/slides/local.css"/>
 <link rel="stylesheet" href="file:///Users/roambot/bin/reveal.js/lib/css/zenburn.css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -30,25 +28,35 @@
 <body>
 <div class="reveal">
 <div class="slides">
+<section id="sec-title-slide"><h1 class="title">PHIL 105 – Week 1 Slides</h1>
+</section>
 <section>
-<section id="slide-orge3c1cd5">
-<h2 id="orge3c1cd5">The Philosophy of Food</h2>
+<section id="slide-org9399bdb">
+<h2 id="org9399bdb">The Philosophy of Food</h2>
 
 <div class="figure">
-<p><img src="file:///Users/roambot/projects/phil105/content/slides/tractors.jpg" alt="tractors.jpg" style="min-width:75%; margin:auto; display:block; text-align:center" />
+<p><img src="file:///Users/roambot/projects/phil105/content/slides/tractor-cran.jpg" alt="tractor-cran.jpg" style="min-width:75%; margin:auto; display:block; text-align:center" />
 </p>
 </div>
 
+<aside class="notes">
+<ul>
+<li>Ocean Spray receiving and processing yard in Tomah, WI</li>
+
+</ul>
+
+</aside>
+
 </section>
 </section>
 <section>
-<section id="slide-org4c313df">
-<h2 id="org4c313df">Class Info</h2>
-<div class="outline-text-2" id="text-org4c313df">
+<section id="slide-org6b738ee">
+<h2 id="org6b738ee">Class Info</h2>
+<div class="outline-text-2" id="text-org6b738ee">
 </div>
 </section>
-<section id="slide-orgbda244a">
-<h3 id="orgbda244a">Class Website</h3>
+<section id="slide-orgbb55888">
+<h3 id="orgbb55888">Class Website</h3>
 <ul>
 <li>Canvas Address: <a href="https://canvas.unl.edu/courses/49195">https://canvas.unl.edu/courses/49195</a>
 <ul>
@@ -65,8 +73,8 @@
 
 </ul>
 </section>
-<section id="slide-orgc98919b">
-<h3 id="orgc98919b">Weekly Section</h3>
+<section id="slide-orgccfac52">
+<h3 id="orgccfac52">Weekly Section</h3>
 <ul>
 <li>Friday &ldquo;quiz&rdquo; section
 <ul>
@@ -82,8 +90,8 @@
 
 </ul>
 </section>
-<section id="slide-orga372888">
-<h3 id="orga372888">Course Materials</h3>
+<section id="slide-org11132d1">
+<h3 id="org11132d1">Course Materials</h3>
 <ul>
 <li class="fragment appear">iClicker unit or iClicker-Reef Polling app</li>
 <li class="fragment appear">Two required books</li>
@@ -93,8 +101,8 @@
 </ul>
 
 </section>
-<section id="slide-org87ce4b1">
-<h3 id="org87ce4b1">Electronics Policy</h3>
+<section id="slide-orgd58dc38">
+<h3 id="orgd58dc38">Electronics Policy</h3>
 <ul>
 <li>No laptops/cellphones unless I&rsquo;ve given you explicit permission
 <ul>
@@ -104,8 +112,8 @@
 
 </ul>
 </section>
-<section id="slide-org7202217">
-<h3 id="org7202217">Evaluation</h3>
+<section id="slide-org6a91808">
+<h3 id="org6a91808">Evaluation</h3>
 <ul>
 <li class="fragment appear">Two Essays: 40%</li>
 <li class="fragment appear">Midterm: 25%</li>
@@ -134,8 +142,8 @@ sections on Friday</li>
 </section>
 </section>
 <section>
-<section id="slide-org6cb4568">
-<h2 id="org6cb4568">Group Exercise</h2>
+<section id="slide-orgf9c2290">
+<h2 id="orgf9c2290">Group Exercise</h2>
 <ul>
 <li>How do we know when something is a member of a kind?
 <ul>
@@ -168,22 +176,85 @@ sections on Friday</li>
 </section>
 </section>
 <section>
-<section id="slide-org8ebead6">
-<h2 id="org8ebead6">Definitions</h2>
+<section id="slide-org8fd17c4">
+<h2 id="org8fd17c4">Definitions</h2>
 <dl>
 <dt class="fragment appear">Necessary conditions</dt><dd class="fragment appear">what is <i>required</i> for something to be the case.</dd>
 <dt class="fragment appear">Sufficient conditions</dt><dd class="fragment appear">what is <i>enough</i> for something to be the case.</dd>
-<dt class="fragment appear">Definition</dt><dd class="fragment appear">the necessary and sufficient conditions for the
-application of a term or concept. A proper definition should
-specify all and only the defined objects.</dd>
+<dt class="fragment appear">Definition</dt><dd class="fragment appear">the <b>necessary</b> and <b>sufficient</b> conditions for the application of
+a term or concept. A proper definition should specify all and
+only the things satisfying the necessary and sufficient
+conditions</dd>
 
 </dl>
+
+<aside class="notes">
+<ul>
+<li>nec &amp; suff cond each give &rsquo;criteria&rsquo; for kind membership</li>
+<li>talk about counterexamples</li>
+<li>often very difficult to give a fully precise definition (e.g. sandwich, chair)</li>
+
+</ul>
+
+</aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org4da5e81">
-<h2 id="org4da5e81">Food &amp; Nutrients</h2>
+<section id="slide-org3b56232">
+<h2 id="org3b56232">Natural Kinds</h2>
+<dl>
+<dt>Natural Kind</dt><dd>a kind that corresponds to some grouping that reflects the
+structure of the natural world rather than the interests,
+actions, or practices of human beings</dd>
+
+</dl>
+
+<p>
+<br />
+</p>
+
+<ul>
+<li class="fragment appear">Examples of natural kind terms:
+<ul>
+<li>&ldquo;gold&rdquo;</li>
+<li>&ldquo;water&rdquo;</li>
+
+</ul></li>
+
+</ul>
+
+<aside class="notes">
+<ul>
+<li>not all scientific definitions are &ldquo;natural&rdquo; - consider &ldquo;planet&rdquo;
+<ol>
+<li>is in orbit around the Sun,</li>
+<li>has sufficient mass to assume hydrostatic equilibrium (a nearly round shape), and</li>
+<li>has &ldquo;cleared the neighborhood&rdquo; around its orbit.</li>
+
+</ol></li>
+<li>Is &ldquo;sandwich&rdquo; a natural kind?</li>
+<li>Is &ldquo;food&rdquo; a natural kind? Is it more like &ldquo;cool&rdquo; or more like &ldquo;water&rdquo;?</li>
+
+</ul>
+
+</aside>
+
+</section>
+</section>
+<section>
+<section id="slide-org18e043e">
+<h2 id="org18e043e">&ldquo;Food&rdquo; Defined?</h2>
+<dl>
+<dt>Food</dt><dd>Any substance or stuff that can provide nutritional calories</dd>
+
+</dl>
+
+
+
+</section>
+<section id="slide-org162774a">
+<h3 id="org162774a">Food &amp; Nutrients</h3>
 <dl>
 <dt>Nutrient</dt><dd>a component or element of a food stuff that an organism needs in order
 to develop and/or survive</dd>
@@ -208,10 +279,8 @@ from its environment</li>
 </aside>
 
 </section>
-</section>
-<section>
-<section id="slide-org3910597">
-<h2 id="org3910597">Food &amp; Energy</h2>
+<section id="slide-orgf9bbb3f">
+<h3 id="orgf9bbb3f">Food &amp; Energy</h3>
 <dl>
 <dt>Calorie</dt><dd>The amount of energy needed to raise the temperature of 1 kilogram of
 water 1 degree Celsius</dd>
@@ -228,17 +297,26 @@ water 1 degree Celsius</dd>
 </aside>
 
 </section>
-</section>
-<section>
-<section id="slide-org6d08d70">
-<h2 id="org6d08d70">&ldquo;Food&rdquo; Defined?</h2>
+<section id="slide-org2316b9b">
+<h3 id="org2316b9b">Does &rsquo;Food&rsquo; Pick out a Natural Kind?</h3>
 <dl>
 <dt>Food</dt><dd>Any substance or stuff that can provide nutritional calories</dd>
 
 </dl>
 
+<p>
+<br />
+</p>
+
+<ol>
+<li class="fragment appear">Does the proposed definition cover all the things we intuitively consider to <i>be</i> food?</li>
+<li class="fragment appear">Does the proposed definition exclude all the things we intuitively think are <i>not</i> food?</li>
+
+</ol>
+
 <aside class="notes">
 <ul>
+<li>Talk about how we understand and analyze definitions</li>
 <li>Are there counterexamples? 
 <ul>
 <li>Not sufficient: feces is not (for humans) food; water &amp; oxygen are not foodstuffs</li>
@@ -251,22 +329,41 @@ calories (its indigestible) but is present in many foods</li>
 
 </aside>
 
+
 </section>
 </section>
 <section>
-<section id="slide-org6f68411">
-<h2 id="org6f68411">Natural Kinds</h2>
+<section id="slide-org4152fcb">
+<h2 id="org4152fcb">Social Construction</h2>
 <dl>
-<dt>Natural Kind</dt><dd>a kind, term, or sortal concept (e.g. cat, dog, mammal) that
-corresponds to a grouping that reflects the structure of the
-natural world rather than the interests, actions, or
-practices of human beings</dd>
+<dt>Social Construction</dt><dd>Something is (at least partly) a social construction only if it is either brought into existence or specifically makes reference to &ldquo;social&rdquo; practices as opposed to &ldquo;natural&rdquo; causes or events</dd>
 
 </dl>
 
+<p>
+<br />
+</p>
+
+<ul>
+<li class="fragment appear">Examples include
+<ul>
+<li class="fragment appear">Artifacts (e.g. washing machines, smart phones)</li>
+<li class="fragment appear">Social position (e.g. husband/wife, king/queen)</li>
+
+</ul></li>
+
+</ul>
 <aside class="notes">
 <ul>
-<li>Is &ldquo;food&rdquo; a natural kind? Is it more like &ldquo;cool&rdquo; or more like &ldquo;water&rdquo;?</li>
+<li>Includes all artifacts, and much else besides
+<ul>
+<li>washing machines (artifact; causally constructed)</li>
+<li>husband/wife (non-artifact; constitutively constructed)</li>
+<li>professor (non-artifact; constitutively constructed)</li>
+
+</ul></li>
+<li>Note that &ldquo;socially constructed&rdquo; doesn&rsquo;t mean &ldquo;not real&rdquo;</li>
+<li>(for next week): Does &ldquo;food&rdquo; pick out a social construction? What about &ldquo;meat&rdquo;?</li>
 
 </ul>
 
